--- a/package.json
+++ b/package.json
@@ -11,41 +11,41 @@
         "rebuild-prod": "run-s vendor-prod app-prod"
     },
     "devDependencies": {
-        "aspnet-webpack": "^3.0.0",
-        "bootstrap": "^4.1.2",
-        "jquery": "^3.3.1",
-        "vue": "^2.5.16",
-        "vuex": "^3.0.1",
-        "vue-loader": "^15.2.4",
-        "vue-style-loader": "^4.1.0",
-        "vue-property-decorator": "^7.0.0",
-        "vue-router": "^3.0.1",
-        "vue-template-compiler": "^2.5.16",
-        "bootstrap-vue": "^2.0.0-rc.11",
-        "css-loader": "^1.0.0",
-        "node-sass": "^4.9.2",
-        "file-loader": "^1.1.11",
-        "url-loader": "^1.0.1",
-        "style-loader": "^0.20.3",
-        "typescript": "^2.9.2",
-        "webpack": "^4.16.0",
-        "webpack-hot-middleware": "^2.22.2",
-        "isomorphic-fetch": "^2.2.1",
-        "extract-text-webpack-plugin": "^4.0.0-beta.0",
-        "event-source-polyfill": "^0.0.12",
-        "@types/webpack-env": "^1.13.6",
+        "@babel/core": "^7.0.0-rc.3",
         "@types/vue": "^2.0.0",
         "@types/vue-router": "^2.0.0",
-        "ts-loader": "^4.4.2",
-        "sass-loader": "^7.0.3",
-        "webpack-cli": "^3.0.8",
-        "webpack-dev-middleware": "^3.1.3",
-        "source-map": "^0.7.3",
-        "@babel/core": "^7.0.0-beta.53",
-        "babel-loader": "^8.0.0-beta.4",
+        "@types/webpack-env": "^1.13.6",
+        "aspnet-webpack": "^3.0.0",
+        "babel-loader": "^8.0.0-beta.6",
         "babel-polyfill": "^7.0.0-alpha.20",
-        "optimize-css-assets-webpack-plugin": "^5.0.0",
+        "bootstrap": "^4.1.2",
+        "bootstrap-vue": "^2.0.0-rc.11",
         "cross-env": "^5.2.0",
-        "npm-run-all": "^4.1.3"
+        "css-loader": "^1.0.0",
+        "event-source-polyfill": "^0.0.12",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "file-loader": "^1.1.11",
+        "isomorphic-fetch": "^2.2.1",
+        "jquery": "^3.3.1",
+        "node-sass": "^4.9.3",
+        "npm-run-all": "^4.1.3",
+        "optimize-css-assets-webpack-plugin": "^5.0.0",
+        "sass-loader": "^7.1.0",
+        "source-map": "^0.7.3",
+        "style-loader": "^0.20.3",
+        "ts-loader": "^4.5.0",
+        "typescript": "^2.9.2",
+        "url-loader": "^1.1.1",
+        "vue": "^2.5.17",
+        "vue-loader": "^15.4.1",
+        "vue-property-decorator": "^7.0.0",
+        "vue-router": "^3.0.1",
+        "vue-style-loader": "^4.1.2",
+        "vue-template-compiler": "^2.5.17",
+        "vuex": "^3.0.1",
+        "webpack": "^4.17.1",
+        "webpack-cli": "^3.0.8",
+        "webpack-dev-middleware": "^3.2.0",
+        "webpack-hot-middleware": "^2.22.2"
     }
 }
